# pendle-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docmap.yaml
docs/: README.md
docs/_templates/: intent.md  plan.md  spec_delta.md  tasks.md
docs/archive/20260111-pendle-api-get-coverage/: plan.md
docs/archive/20260111-pendle-mcp-init/: plan.md
docs/archive/20260119-api-resilience/: intent.md  spec_delta.md  tasks.md
docs/archive/20260119-mcp-tooldocs-errors/: intent.md  spec_delta.md  tasks.md
docs/archive/20260119-timeframe-ohlcv/: intent.md  spec_delta.md  tasks.md
docs/archive/20260502-api-alignment/: intent.md  spec_delta.md  tasks.md
docs/sot/: architecture.md  index.md  overview.md
src/pendle-mcp/: .gitignore  pyproject.toml
src/pendle-mcp/src/pendle_mcp/: __main__.py  chain_apy.py  cli.py  pendle_api.py  server.py
src/pendle-mcp/tests/: test_chain_apy.py  test_cli.py  test_concurrency.py  test_pendle_api_client.py  test_server_convert_v2_strip.py  test_server_market_data_calibration.py  test_server_new_market_opportunities.py  test_server_ohlcv_parsing.py  test_server_pnl_group_by.py  test_server_pnl_summary.py
