[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pendle-mcp"
version = "0.1.0"
description = "MCP server for Pendle official API v2"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "mcp",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
pendle-mcp = "pendle_mcp.__main__:main"
pendle-mcp-cli = "pendle_mcp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
